# agnes-smart-studio

./: .coverage  .crux_identity.md  .editorconfig  .env.example  .gitignore  .mcp.json  .pre-commit-config.yaml  .safety-policy.yml  AGENTS.md  AGENTS_REF.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  COMFYUI_METHODOLOGY.md  CONTRIBUTING.md  CRUX_TUI_v2_三平台全面答辩白皮书.md  DEPENDENCY_REPORT.md  FAQ.md  GLOSSARY.md  HELP.md  LICENSE  METHODOLOGY.md  README.md  _E3.txt  _E4.txt  _E5.txt  _E8.txt  _L0.txt  _L1.txt  _L10.txt  _L11.txt  _L12.txt  _L14.txt  _L2.txt  _L3.txt  _L7.txt  _L8.txt  _R3_report.md  _R4_report.md  __edge_connect.py  (+511 more)
.codebuddy/: settings.local.json
.crux/: error_sink.sqlite
.crux_memory/: growth.json  memory.json
.crux_wiki/: _index.json  java教程.json  python教程.json  round3.json
.devcontainer/: devcontainer.json
.qoder/: settings.local.json
Agnes/: .gitignore  LICENSE.txt  README.md  build.py  kids_launcher.pyw  launcher.pyw  pytest.ini  query_tool.pyw  setup.iss  test_output.txt  启动命令行.bat  启动图形界面.bat  启动小画家.bat  启动工具箱.bat  查询工具.bat
_archive/: FAQ.md  HELP.md  tools_edge_send_read.py
advisor/: __init__.py  base.py  cache.py  cdp_advisor.py  circuit_breaker.py  prompt.py
agents/: API-Designer.agent.md  Architecture-Documenter.agent.md  Ask.agent.md  Code-Reviewer.agent.md  Database.agent.md  Debugger.agent.md  DevOps-Deployer.agent.md  Documentation-Writer.agent.md  Explore.agent.md  Git-Workflow.agent.md  Implementer-Backend.agent.md  Implementer-Frontend.agent.md  Implementer-Refactor.agent.md  Implementer-Test.agent.md  Implementer.agent.md  Orchestrator.agent.md  Performance-Profiler.agent.md  Plan.agent.md  README.md  Security-Auditor.agent.md  Self-Improver.agent.md
agnes_studio/: __init__.py  agnes_client.py  app.py
awareness/: .hash-state.json  AGENTS.md  MEMORY.md  USER.md
comfyflow_compiler/: __init__.py  api_client.py  benchmark.py  blueprint_loader.py  blueprint_miner.py  blueprint_packer.py  blueprint_registry.py  cli.py  compiler.py  environment_scanner.py  graph_composer.py  hardware_profiler.py  intent_parser.py  launcher.py  model_downloader.py  models.py  node_catalog.py  parameter_table.py  quality_gate.py  safety_gate.py  user_facing.py  workflow_enricher.py  workflow_parser.py  workflow_validator.py
core/: MODULES.md  __init__.py  adaptive_learner.py  adr_engine.py  adversarial_bypass.py  agent.py  agent_cache.py  agent_loader.py  agnes_models.py  agnes_multimodal.py  agnes_token_pool.py  aria2_bridge.py  artifact_activation.py  artifact_pipeline.py  async_chat.py  async_client.py  async_render.py  async_runtime.py  audio_tools.py  audit_runner.py  awareness_graph.py  background.py  beast_wiring.py  bootstrap.py  brain.py  brain_aesthetics.py  brain_combat.py  brain_creative.py  brain_vision.py  browser_control.py  browser_control_cli.py  browser_runtime.py  browser_tools.py  cancellation.py  capability.py  capability_registry.py  cdp_browser.py  chat.py  chat_history.py  chat_hooks_setup.py  (+287 more)
data/: agnes_memory.db  arena_reports.jsonl  comfyui_error_kb.sqlite  crux_event_log.sqlite  gpt_seed_data.json  gpt_seed_data_2.json  intelligence_eval_cases.jsonl  intelligence_traces.db  learning_store.db  mined_img2img.json  mined_ltx_video.json  mined_video.json  policy_memory.db  router_golden_cases.jsonl  seed_templates.json
demos/: intelligence_pipeline_demo.py
designs/: terminal-ui-spec.md
docs/: AGNES_VISUAL_PRODUCTION_CONSTITUTION.md  UPGRADE_PLAN.md  architecture-lore-and-slots.md  architecture.md  assessment-chat-py-split.md  authoring.md  blueprint_schema.md  commands.md  flaky-tests.md  health-check-report-2026-07-15.md  mcp-fourth-quadrant.md  plan-beauty-portrait-embed.md  plan-entity-knowledge-embed.md  plan-transcendent-thinking-embed.md  quickstart.md  skills.md  smartbrain_分组分析.md  tools.md
domain/: __init__.py  errors.py  events.py  plans.py  requests.py  results.py
engines/: __init__.py  batch_grid.py  image_to_image.py  text_to_image.py  video.py
examples/: compatibility_match.py  merge_sort.py  sorting.py
mcp_matrix/: __init__.py  deploy.py
mined_blueprints/: mined_flux.json  mined_lipsync.json  mined_wan_video.json
pipeline/: __init__.py  workflows.py
plugins/: __init__.py  trae_agent_converter.py
prompts/: __init__.py  assembler.py
public/: index.html
rules/: coding-discipline.rules.md  contributing.rules.md  edit-precision.rules.md  encoding-i18n.rules.md  error-translation.rules.md  intent-routing.rules.md  onboarding.rules.md  python-style.rules.md  rendering.rules.md  secret-security.rules.md  self-preservation.rules.md  session-summary.rules.md  zcode-superpowers-methodology.rules.md
runtime/: __init__.py  engine.py
schemas/: models.schema.json
scripts/: batch_pack.py  check_chinese_incremental.py  check_pyright_incremental.py  collect_flaky_matrix.py  convert_anthropics_skills.py  pack_report.json  update_tool_count.py
skills/: SKILL_INDEX.md  actor-craft.skill.json  agentic-identity-and-trust-architect.skill.json  agents-orchestrator.skill.json  agnes-constitution-core.skill.json  agnes-diagnostics.skill.json  agnes-scoring.skill.json  agnes-shot-contract.skill.json  algorithmic-art.skill.json  api-designer.skill.json  architecture-reasoner.skill.json  aria2-downloader.skill.json  asset-manager.skill.json  audio-director.skill.json  authoring-skills.skill.json  automation-governance-architect.skill.json  brand-guidelines.skill.json  browser-control-prompt.txt  browser-control.skill.json  browser-use.skill.json  caliber.skill.json  canvas-design.skill.json  cinematic-keyframe.skill.json  cinematic-master.skill.json  claude-api.skill.json  cloudflare-worker-builder.skill.json  code-guardian.skill.json  code-review-autofix.skill.json  code-review.skill.json  code-reviewer.skill.json  comfyui-bridge.skill.json  comic-drama-writer.skill.json  copywriting-master.skill.json  core-showrunner.skill.json  crash-expert-skill.skill.json  creative-engine.skill.json  creative-leap-pro.skill.json  creative-thinking.skill.json  data-privacy-officer.skill.json  debug-master.skill.json  (+81 more)
(+1932 files in other folders)
