[project]
name = "comfyflow-compiler"
version = "6.5.0"
description = "零门槛 ComfyUI 高级工作流编译器"
requires-python = ">=3.11"
dependencies = [
    "httpx",
    "playwright",
]

[project.scripts]
comfyflow = "comfyflow_compiler.cli:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["comfyflow_compiler*"]
