[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "crux-smart-studio"
version = "5.0.0"
description = "CRUX Studio — AI-native creative + coding platform · 75+ tools"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27",
    "rich>=13",
    "Pillow>=10",
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
    "prompt_toolkit>=3.0",
    "nest_asyncio>=1.5",
    "playwright>=1.40",
    "edge-tts>=6.1",
    "requests>=2.28",
]
authors = [{name = "CRUX Studio"}]
readme = "README.md"
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.scripts]
crux = "crux_studio:main"
crux-chat = "crux_studio:main_chat"
crux-query = "crux_studio:main_query"

# 扁平多包布局：显式声明只收代码包，避免 setuptools 自动发现把
# output/assets/skills 等非代码目录当成 Python 包（flat-layout 多包会直接报错）。
[tool.setuptools.packages.find]
include = ["core*", "ui*", "engines*", "pipeline*", "utils*"]

[tool.setuptools]
py-modules = ["crux_studio"]

[project.urls]
Homepage = "https://github.com/user/crux-smart-studio"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "pytest-asyncio>=0.23",
    "coverage>=7.0",
    "ruff>=0.4",
    "pyright>=1.1.400",
]

[tool.pytest.ini_options]
# 只收集 tests/ 顶层单元测试（mock，不打真实 API）。
# tests/manual/ 是手动集成脚本（打真实 API、有自己的入口），不纳入 CI 收集。
testpaths = ["tests"]
norecursedirs = ["tests/manual", "scripts", "output", ".codebuddy"]
markers = [
    "unit: Fast tests, no I/O, no network, no browser. Run first.",
    "integration: Tests that wire multiple modules together.",
    "slow: Tests taking >2 seconds.",
    "browser: Requires real browser (Playwright/CDP).",
    "network: Requires internet connectivity.",
    "mcp: Requires MCP server running.",
    "lsp: Requires LSP server running.",
    "github: Requires GitHub token.",
    "e2e: End-to-end, full stack.",
    "smoke: Quick sanity check (subset of unit).",
]
pythonpath = ["."]
python_files = ["test_*.py"]
addopts = "-q"

# pytest-asyncio 显式声明 strict 模式：仅 @pytest.mark.asyncio 标记的测试走
# asyncio 执行器。其余同步测试方法中的 async 协程必须自行用 asyncio.run()
# 驱动（见 test_async_chat / test_async_engines / test_showrunner / _multi_agent）。
# 显式声明避免未来 pytest-asyncio 版本改默认值（auto）时静默改变收集行为。
asyncio_mode = "strict"

[tool.ruff]
line-length = 120
target-version = "py310"
extend-exclude = ["scripts/scratch", "tests/manual", "output", ".codebuddy", "models"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort (import sorting)
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "C4",   # flake8-comprehensions
    "TCH",  # flake8-type-checking (reduce import overhead)
    "RUF",  # ruff-specific rules
    "PT",   # flake8-pytest-style
]
ignore = [
    "E501",   # line-length 由 formatter / line-length 配置管理
    "E402",   # module-import-not-at-top（入口文件/条件 import 较多，per-file-ignores 已覆盖）
    "PT011",  # pytest.raises({exc}) too broad (允许宽异常匹配)
    "RUF001",   # 中文用户可见字符串中全角标点不强制转半角
    "RUF002",   # 中文 docstring/注释中的全角标点不强制转半角
    "RUF003",
    "RUF012",   # ClassVar 迁移成本高，暂时允许可变类属性默认值
]

[tool.ruff.lint.per-file-ignores]
# E402: module-import-not-at-top — 入口文件、动态 sys.path 注入、测试文件允许
"crux_studio.py" = ["E402"]
"core/**/__init__.py" = ["E402"]
"core/*_tools.py" = ["E402"]
"tests/**/*.py" = ["E402"]

[tool.pyright]
# 与 ruff extend-exclude 保持一致：临时脚本/生成产物不纳入静态分析
exclude = ["scripts/scratch", "tests/manual", "output", ".codebuddy", "**/__pycache__"]
typeCheckingMode = "basic"
reportMissingTypeStubs = false
reportUnknownMemberType = false
reportUnknownArgumentType = false
reportUnknownVariableType = false

[tool.coverage.run]
source = ["core", "ui", "engines", "utils", "pipeline"]
omit = ["*/__pycache__/*", "*/tests/*"]

[tool.coverage.report]
show_missing = true
skip_covered = true
# 门禁策略：基线 55%（当前实际约 57%），留 ~2% 防抖余量。
# 周爬坡：每 merge 一个 worktree 把门禁上调 2-3 个百分点。
# 上游原来是 96%（与实际值脱节），CI 也没跑 --cov，等于形同虚设。
fail_under = 58

