[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "crux-smart-studio"
version = "6.1.0"
description = "CRUX Studio — AI-powered terminal coding assistant with tool access"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "rich>=13",
    "Pillow>=10",
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
    "prompt_toolkit>=3.0",
    "nest_asyncio>=1.5",
    "playwright>=1.40",
    "edge-tts>=6.1",
    "requests>=2.28",
]
authors = [{name = "CRUX Studio"}]
readme = "README.md"
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.scripts]
crux = "crux_studio:main"
crux-chat = "crux_studio:main_chat"
crux-query = "crux_studio:main_query"

# 扁平多包布局：显式声明只收代码包，避免 setuptools 自动发现把
# output/assets/skills 等非代码目录当成 Python 包（flat-layout 多包会直接报错）。
[tool.setuptools.packages.find]
include = ["core*", "ui*", "engines*", "pipeline*", "utils*"]

[tool.setuptools]
py-modules = ["crux_studio"]

[project.urls]
Homepage = "https://github.com/user/crux-smart-studio"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "pytest-asyncio>=0.23",
    "coverage>=7.0",
    "ruff>=0.4",
    "pyright>=1.1.400",
    "bandit>=1.7",
    "vulture>=2.11",
    "hypothesis>=6.100",
    "deptry>=0.16",
    "radon>=6.0",
    "pytest-randomly>=3.15",
    "dodgy>=0.2",
    "safety>=3.2",
    "interrogate>=1.7",
    "check-jsonschema>=0.29",
    "vcrpy>=6.0",
    "pytest-vcr>=1.0",
    "pre-commit>=3.8",
    "syrupy>=4.6",
    "pexpect>=4.9",
    # mutmut: Windows 不支持，需在 WSL 中运行 (https://github.com/boxed/mutmut/issues/397)
    # "mutmut>=3.0",
]

[tool.pytest.ini_options]
# 只收集 tests/ 顶层单元测试（mock，不打真实 API）。
# tests/manual/ 是手动集成脚本（打真实 API、有自己的入口），不纳入 CI 收集。
testpaths = ["tests"]
norecursedirs = ["tests/manual", "scripts", "output", ".codebuddy", ".hypothesis"]
markers = [
    "unit: Fast tests, no I/O, no network, no browser. Run first.",
    "integration: Tests that wire multiple modules together.",
    "slow: Tests taking >2 seconds.",
    "browser: Requires real browser (Playwright/CDP).",
    "network: Requires internet connectivity.",
    "mcp: Requires MCP server running.",
    "lsp: Requires LSP server running.",
    "github: Requires GitHub token.",
    "e2e: End-to-end, full stack.",
    "smoke: Quick sanity check (subset of unit).",
]
pythonpath = ["."]
python_files = ["test_*.py"]
addopts = "-q"

# pytest-asyncio 显式声明 strict 模式：仅 @pytest.mark.asyncio 标记的测试走
# asyncio 执行器。其余同步测试方法中的 async 协程必须自行用 asyncio.run()
# 驱动（见 test_async_chat / test_async_engines / test_showrunner / _multi_agent）。
# 显式声明避免未来 pytest-asyncio 版本改默认值（auto）时静默改变收集行为。
asyncio_mode = "strict"

[tool.ruff]
line-length = 120
target-version = "py310"
extend-exclude = ["scripts/scratch", "tests/manual", "output", ".codebuddy", "models"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort (import sorting)
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "C4",   # flake8-comprehensions
    "TCH",  # flake8-type-checking (reduce import overhead)
    "RUF",  # ruff-specific rules
    "PT",   # flake8-pytest-style
]
ignore = [
    "E501",   # line-length 由 formatter / line-length 配置管理
    "E402",   # module-import-not-at-top（入口文件/条件 import 较多，per-file-ignores 已覆盖）
    "PT011",  # pytest.raises({exc}) too broad (允许宽异常匹配)
    "RUF001",   # 中文用户可见字符串中全角标点不强制转半角
    "RUF002",   # 中文 docstring/注释中的全角标点不强制转半角
    "RUF003",
    "RUF012",   # ClassVar 迁移成本高，暂时允许可变类属性默认值
    "SIM102",   # 合 if 为一句是风格偏好，不阻塞 CI
    "SIM105",   # contextlib.suppress 风格偏好
    "SIM115",   # 非关键路径文件句柄管理偏好
    "PT017",    # pytest.raises 中无 assert 是风格问题
    "PT018",    # except 块中 assert 是测试常见模式
    "PT012",    # pytest.raises 内多个 assert 是风格问题
    "E741",     # 模糊变量名 (l, O, I) 是风格偏好
    "B017",     # pytest.raises(Exception) 在测试中合理
]

[tool.ruff.lint.per-file-ignores]
# E402: module-import-not-at-top — 入口文件、动态 sys.path 注入、测试文件允许
"crux_studio.py" = ["E402"]
"core/**/__init__.py" = ["E402"]
"core/*_tools.py" = ["E402"]
"tests/**/*.py" = ["E402"]

[tool.pyright]
# exclude: noise directories, sub-projects, and generated/temp files.
# tests excluded for now (151 pre-existing errors) — re-enable when
# core+ui reach <50 errors and tests can be incrementally checked.
exclude = [
    "scripts/scratch", "tests/manual", "output", ".codebuddy",
    "**/__pycache__", "tmp", "advisor", "tools", "scripts",
    "apps", "domain", "engines", "browser-companion", "tests",
]
typeCheckingMode = "basic"
reportMissingTypeStubs = false
reportUnknownMemberType = false
reportUnknownArgumentType = false
reportUnknownVariableType = false
reportOptionalMemberAccess = false  # 37 pre-existing, mostly browser_control Optional attrs
reportRedeclaration = false          # 11 pre-existing, brain_*.py decorator patterns

[tool.coverage.run]
source = ["core", "ui", "engines", "utils", "pipeline"]
omit = ["*/__pycache__/*", "*/tests/*"]

[tool.coverage.report]
show_missing = true
skip_covered = true
# 门禁策略：基线 55%（当前实际约 57%），留 ~2% 防抖余量。
# 周爬坡：每 merge 一个 worktree 把门禁上调 2-3 个百分点。
# 上游原来是 96%（与实际值脱节），CI 也没跑 --cov，等于形同虚设。
fail_under = 58

# ── bandit: security linting ─────
[tool.bandit]
exclude_dirs = ["tests", "output", ".codebuddy", "scripts"]
skips = ["B101"]  # skip assert detection (test files excluded anyway, belt-and-suspenders)

# ── vulture: dead code detection ─────
[tool.vulture]
exclude = ["tests/", "output/", ".codebuddy/", "scripts/"]
min_confidence = 70
# Whitelist patterns that vulture may mistake for dead code
# (dynamic imports, registries, plugin hooks, etc.)
ignore_names = ["exc_*", "_cached_keys", "handle_*", "on_*"]

# ── deptry: dependency audit ─────
# deptry is CLI-only, no pyproject.toml config section available.
# CI invocation:
#   deptry . \
#     --known-first-party "core,ui,engines,utils,pipeline" \
#     --per-rule-ignores "DEP002=pytest|pytest-cov|pytest-asyncio|coverage|ruff|pyright|bandit|vulture|hypothesis|deptry,DEP003=win32clipboard|win32file|win32pipe|pywintypes"
# Known remaining issues (all expected):
#   DEP001: faster_whisper,whisper,weasyprint,chardet,jieba — optional/conditional imports
#   DEP001: query (crux_studio.py) — likely local module false positive
#   DEP001: tui_art (widgets_v2.py) — likely local module
#   DEP003: openai,reportlab,websockets,charset_normalizer,psutil,torch,pydantic,
#           uvicorn,fastapi,tomli,pyperclip,pygments — directly used transitive deps

# ── radon: cyclomatic complexity ─────
# CI commands:
#   radon cc core/ ui/ --min C --total-average    # C+ complexity
#   radon mi core/ ui/ --min C                     # C+ maintainability
# Threshold reference: A=1-5, B=6-10, C=11-20, D=21-30, E=31-50, F=51+
[tool.radon]
cc_rank = "C"           # flag functions with complexity >= C (11+)
mi_rank = "C"           # flag files with maintainability index <= C
exclude = ["tests/*", "output/*"]

# ── pytest-randomly: randomized test order ─────
# Automatically enabled when installed (no config needed).
# Randomizes test + fixture order to detect hidden inter-test dependencies.
# To run in a fixed seed (reproducible): pytest --randomly-seed=12345
# To disable for a single run: pytest -p no:randomly

# ── interrogate: docstring coverage ─────
[tool.interrogate]
ignore-init-module = true
ignore-init-method = false
ignore-module = false
ignore-nested-functions = false
ignore-nested-classes = true
ignore-setters = true
fail-under = 65                  # current: 64%, target: 65% → 80%
# Minimal coverage now, CI gate will ratchet up over time.
exclude = ["tests", "output", ".codebuddy", "scripts", "schemas"]
# Long-tail lore/slot modules have low coverage by design — exclude temporarily
whitelist-regex = []

# ── check-jsonschema: validate JSON configs ─────
# CI command:
#   check-jsonschema --schemafile schemas/models.schema.json models.json
# Note: tools.json schema not yet defined — add when schema evolves.
